fixed alignment

--- a/ContentStyle.css
+++ b/ContentStyle.css
@@ -101,6 +101,7 @@
     float: left;
     width: 39%;
     text-align: right;
+    line-height: 26px;
     height: 305px;
 
 }
